force-app/main/default/objects/PayementSalaire__c/PayementSalaire__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les paiements de salaire de la pharmacie.</description>
    <label>PayementSalaire</label>
    <nameField>
        <displayFormat>PaySalaire-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayementSalaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>