force-app/main/default/objects/PayementSalaire__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Champs représentant la Date du paiement</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>