force-app/main/default/objects/PayementSalaire__c/fields/ModePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModePaiement__c</fullName>
    <description>Champs représentant le mode de paiement</description>
    <label>Mode Paiement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virement</fullName>
                <default>true</default>
                <label>Virement</label>
            </value>
            <value>
                <fullName>Espece</fullName>
            </value>
            <value>
                <fullName>mobile money</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>