force-app/main/default/objects/PayementSalaire__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Champs représentant le montant a payé</description>
    <label>Montant</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>