force-app/main/default/objects/PayementSalaire__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Champs représentant la personne qui reçoit le paie</description>
    <label>Personnel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PayementSalaires</relationshipLabel>
    <relationshipName>PayementSalaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>