force-app/main/default/objects/PayementSalaire__c/fields/Statu__c.field-meta.xml
<CustomField>
    <fullName>Statu__c</fullName>
    <description>Champs représentant le status du salaire si on l&apos;a paye ou y&apos;a probleme</description>
    <label>Statu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bloqué</fullName>
            </value>
            <value>
                <fullName>partiel</fullName>
            </value>
            <value>
                <fullName>Clôturés</fullName>
                <default>true</default>
                <label>Clôturés</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>