force-app/main/default/objects/PayementSalaire__c/listViews/Paiements.listView-meta.xml
<ListView>
    <fullName>Paiements</fullName>
    <columns>NAME</columns>
    <columns>Personnel__c</columns>
    <columns>Montant__c</columns>
    <columns>Statu__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Paiements</label>
</ListView>