force-app/main/default/objects/PayementSalaire__c/listViews/PaiementsClotures.listView-meta.xml
<ListView>
    <fullName>PaiementsClotures</fullName>
    <columns>NAME</columns>
    <columns>Personnel__c</columns>
    <columns>Montant__c</columns>
    <columns>Statu__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statu__c</field>
        <operation>equals</operation>
        <value>Clôturés</value>
    </filters>
    <label>PaiementsClotures</label>
</ListView>